--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
-        "mpdf/mpdf": "^8.2"
+        "mpdf/mpdf": "^8.2",
+        "spatie/laravel-backup": "^8.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
